# aptora

./: .gitignore  .vercelignore  FRONTEND_INTEGRATION_SUMMARY.md  KANA_LABS_INTEGRATION_TASKS.md  README.md  build-frontend.sh  dev.sh  docker-compose.yml  nginx.conf  railway.toml  run_tests.sh  setup-env.sh  setup.sh  start-frontend.sh  start.sh  vercel.json
backend/: .dockerignore  .gitignore  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  QUICK_START.md  README.md  diesel.toml  docker-compose.yml  env.example  railway.toml  setup.sh
backend/migrations/: 2024_01_01_000001_create_users_table.sql
backend/migrations/2024_01_01_000001_create_users_and_sessions/: down.sql  up.sql
backend/migrations/2024_01_01_000002_create_markets_table/: down.sql  up.sql
backend/migrations/2024_01_01_000003_create_orders_table/: up.sql
backend/migrations/2024_01_01_000004_create_balances_table/: down.sql  up.sql
backend/migrations/2024_01_01_000005_insert_sample_data/: down.sql  up.sql
backend/migrations/2024_01_01_000006_create_positions_table/: up.sql
backend/migrations/2025_01_20_add_password_reset_tokens/: down.sql  up.sql
backend/migrations/2025_09_02_add_social_features/: down.sql  up.sql
backend/src/: auth.rs  db.rs  email.rs  kana_client.rs  main.rs  middleware.rs  models.rs  schema.rs  social.rs  utils.rs
backend/src/handlers/: auth.rs  health.rs  mod.rs  social.rs  trading.rs  user.rs  wallet.rs
backend/tests/: health_test.rs  test_api_endpoints.rs  test_social_features.rs
backend/tests/common/: mod.rs
contract/: Coin.move  Move.toml
frontend/: .pnpmrc  (+19 more)
(+46 files in other folders)
